--- a/invitacion.html
+++ b/invitacion.html
@@ -33,7 +33,7 @@
     <p class="parrafo8">También te invito a mi pequeña recepción para celebrar ambos acontecimientos. <br> <br>
         Mi fiesta se va a llevar a cabo en: Padre Elizalde 71 Piso 2 Dto A. Al finalizar la misa. 
     </p>
-    <div class="ifraame"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.6219487224153!2d-58.54511592514449!3d-34.638992759360455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc81203989177%3A0x63a23c827a454aa!2sPadre%20Elizalde%20100%2C%20B1702FLB%20Ciudadela%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1718647221731!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="ifraame"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.6145153806397!2d-58.54472022514455!3d-34.63918055937036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc8121074e6ef%3A0x7d643caec67f6452!2sPadre%20Elizalde%2071%2C%20B1702FLA%20Ciudadela%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1723637220810!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <p class="parrafo9">Te espero con muchas ansias para que hagamos de este día un recuerdo precioso para toda la vida.</p>
 </section>
@@ -50,6 +50,13 @@ Necesito que me confirmes tu asistencia al whatsapp de mami♥.</p>
         Y para no causarle contratiempos a mamá en caso de tener que ir a cambiar los regalos. <br>
         Te voy a dejar aca abajo los datos de mi cuenta para que puedas hacer un deposito o transferencia, ya que realmente es mejor que mamá pueda comprarme en base a mis necesidades de crecimiento.</p>
         <p class="parrafo12">DATOS DE CUENTA</p>
+        <li>
+            <ul>Giselda Edith Alderetes</ul>
+            <ul>CVU:0000003100006866673529</ul>
+            <ul>Alias: perla.mama.tia</ul>
+            <ul>CUIT/CUIL: 27264353705</ul>
+            <ul>Mercado Pago</ul>
+        </li>
         <p class="parrafo13">Por último y sin animos de hacerla tan larga, todas las fotos y videos que tomes en mis celebraciones te pido que si la compartis en redes coloques el hastag #Shaina2024 y #CumpleyBautismodeShaina2024, así nos quedan todos los recuerdos.
             Desde ya te aviso que me pondría super contenta verte ahí. <br> <br>
         </p>
