--- a/invitacion.html
+++ b/invitacion.html
@@ -37,9 +37,6 @@
     </div>
     <p class="parrafo9">Te espero con muchas ansias para que hagamos de este día un recuerdo precioso para toda la vida.</p>
 </section>
-<img src="" alt="" class="galeria">
-<img src="" alt="" class="galeria">
-<img src="" alt="" class="galeria">
 <h2><img src="./img/tip.gif" alt=""></h2>
 <p class="parrafo10">Para ayudar a mamá a diagramar y organizar el festejo así no hay faltantes de ningún tipo. <br>
 Aunque te recuerdo que AMOR y RISAS, ¡NO VAN A FALTAR! <br>
@@ -50,13 +47,13 @@ Necesito que me confirmes tu asistencia al whatsapp de mami♥.</p>
         Y para no causarle contratiempos a mamá en caso de tener que ir a cambiar los regalos. <br>
         Te voy a dejar aca abajo los datos de mi cuenta para que puedas hacer un deposito o transferencia, ya que realmente es mejor que mamá pueda comprarme en base a mis necesidades de crecimiento.</p>
         <p class="parrafo12">DATOS DE CUENTA</p>
-        <li>
-            <ul>Giselda Edith Alderetes</ul>
-            <ul>CVU:0000003100006866673529</ul>
-            <ul>Alias: perla.mama.tia</ul>
-            <ul>CUIT/CUIL: 27264353705</ul>
-            <ul>Mercado Pago</ul>
-        </li>
+        
+        <p class="cuentaa">Giselda Edith Alderetes</p> 
+            <p class="cuentaa">CVU:0000003100006866673529</p>
+            <p class="cuentaa">Alias: perla.mama.tia</p>
+            <p class="cuentaa">CUIT/CUIL: 27264353705</p>
+            <p class="cuentaa">Mercado Pago</p>
+        
         <p class="parrafo13">Por último y sin animos de hacerla tan larga, todas las fotos y videos que tomes en mis celebraciones te pido que si la compartis en redes coloques el hastag #Shaina2024 y #CumpleyBautismodeShaina2024, así nos quedan todos los recuerdos.
             Desde ya te aviso que me pondría super contenta verte ahí. <br> <br>
         </p>
